styles.css
*,
::before,
::after {
  box-sizing: border-box;
}

body {
  font-family: "ADLaM Display", cursive;
  background-color: #a45ee5; /* Amethyst Color (shade of purple) */
  margin: 0;
  transition: 1s;

  /*Aborting implementing "background-image: gradient" feature
    Change the background to be an animated gradient which changes color based on 
    winner if you ever come back to this project
  */
}

.red-bg {
  transition: 1s;
  background-color: lightcoral;
}

.green-bg {
  transition: 1s;
  background-color: lightgreen;
}

h1 {
  font-size: 5rem;
  margin: 4vh 10vw;
  text-align: center;
  background: linear-gradient(to right, red, red, yellow, yellow, green, green);
  background-clip: text;
  -webkit-background-clip: text;
  color: transparent;
}

#round-winner {
  text-align: center;
  margin-top: 2em;
  margin-bottom: -0.5em;
  font-size: 2rem;
}

.scoreboard-container {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 60px;
}

/*


    SCOREBOARD IS NOT CENTERED CORRECTLY SO FIX THAT !!!!


*/

.scoreboard-container img {
  width: 200px;
}

.player-sprite,
.computer-sprite {
  display: flex;
  align-items: center;
  gap: 20px;
}

.player-sprite > p {
  color: green;
  font-size: 2rem;
}

.computer-sprite > p {
  color: red;
  font-size: 2rem;
}

#scoreboard > p {
  background-color: lightgray;
  font-size: 4rem;
  padding: 20px 40px;
  border: 5px solid grey;
}

.choices-container {
  display: flex;
  justify-content: center;
  gap: 40px;
}

.choices-container img {
  width: 120px;
}

.choice-button:hover {
  cursor: pointer;
  transition: 0.25s;
  filter: brightness(150%);
  transform: scale(1.1, 1.1);
}

.choice-button:active {
  transform: none;
}

.log-container p {
  width: 700px;
  height: 200px;
  border: 5px solid grey;
  background-color: white;
  margin: 40px auto 0;
  padding: 4px;
}

footer {
  text-align: center;
  margin-top: 20px;
  padding: 4px;
}

footer > a {
  color: black;
}

.grayscale {
  transition: 0.5s;
  filter: grayscale(75%);
}

